<resources>
    <string name="app_name">Gas THQ</string>
    <string name="app_name_dev_version">Gas DEV</string>
    <string name="app_name_banle_version">Gas BanLe</string>

    <string name="not_select">-- Chọn --</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="done">Hoàn tất</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="change_password">Đổi mật khẩu?</string>
    <string name="choose_customer">Chọn khách hàng</string>
    <string name="all">Tất cả</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_sell">Bán hàng</string>
    <string name="title_setting">Điều hành</string>
    <string name="title_other">Khác</string>
    <string name="status">Trạng thái</string>
    <string name="lxbh">LXBH</string>
    <string name="customer">Khách hàng</string>
    <string name="enter_text_search">Nhập từ khoá tìm kiếm</string>
    <string name="new_status">Chờ duyệt</string>
    <string name="approved_status">Đã duyệt</string>
    <string name="reject_status">Từ chối</string>
    <string name="cancel_status">Đã huỷ</string>
    <string name="confirm">Xác nhận</string>
    <string name="close">Đóng</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="text_ok">Đồng ý</string>
    <string name="type_xk">Xuất kho</string>
    <string name="type_ban_le">Bán hàng</string>
    <string name="type_ban_le_tdl">Bán Tổng đại lý</string>
    <string name="biometric_negative_button_text">Hủy bỏ</string>

    <string name="loading">Đang tải...</string>
</resources>