<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/tv_header_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_border_top"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/confirm"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_header_dialog"
        android:background="@drawable/bg_dialog_border_bottom">

        <TextView
            android:id="@+id/tv_content_dialog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textColor="@color/gray_404A57"
            android:textSize="@dimen/text_14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_content_dialog"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_reset"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"

                android:textColor="@color/black_2E353F"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/tv_dialog_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_ok"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/text_ok"
                android:textColor="@color/black_2E353F"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>