<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_F1F5F8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_border_body"
            android:backgroundTint="@color/white_ffffff"
            android:elevation="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_border"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/edt_login_password"
                android:paddingHorizontal="@dimen/_11sdp"
                android:singleLine="true"
                android:textColor="@color/blue_2C5181"
                android:textSize="@dimen/_13sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_border"
                android:hint="@string/new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/bt_login"
                android:paddingHorizontal="@dimen/_11sdp"
                android:singleLine="true"
                android:textColor="@color/blue_2C5181"
                android:textSize="@dimen/_13sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/bg_border"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/bt_login"
                android:paddingHorizontal="@dimen/_11sdp"
                android:singleLine="true"
                android:textColor="@color/blue_2C5181"
                android:textSize="@dimen/_13sdp" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_border_login"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textColor="@color/white_ffffff"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>