<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.gas.thq.ui.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/wrUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--UserName-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:textColorHint="@color/blue_2C5181"
        android:textSize="@dimen/_16sdp"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_login_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_border"
            android:hint="@string/account_name"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/edt_login_password"
            android:paddingHorizontal="@dimen/_11sdp"
            android:singleLine="true"
            android:textColor="@color/blue_2C5181"
            android:textSize="@dimen/_13sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:textColorHint="@color/blue_2C5181"
        android:textSize="@dimen/_16sdp"
        app:hintEnabled="true"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_border"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/bt_login"
            android:paddingHorizontal="@dimen/_11sdp"
            android:singleLine="true"
            android:textColor="@color/blue_2C5181"
            android:textSize="@dimen/_13sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@drawable/bg_border_login"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/wrPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_3sdp"
        android:text="Hỗ trợ 24/7"
        android:textColor="@color/gray_404A57"
        android:textSize="@dimen/_12sdp"
        app:drawableTopCompat="@drawable/suportcalling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>